// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectiveSection > empty resume 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      />
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > overview 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M216,40H40A16,16,0,0,0,24,56V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A16,16,0,0,0,216,40ZM156,88a12,12,0,1,1-12,12A12,12,0,0,1,156,88Zm60,112H40V160.69l46.34-46.35a8,8,0,0,1,11.32,0h0L165,181.66a8,8,0,0,0,11.32-11.32l-17.66-17.65L173,138.34a8,8,0,0,1,11.31,0L216,170.07V200Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Dream Job Traits
          <div
            class="text-sm text-zinc-300"
          >
            test-overview
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > roles, workModes, and employmentTypes > multiple 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M237.94,107.21a8,8,0,0,0-3.89-5.4l-29.83-17-.12-33.62a8,8,0,0,0-2.83-6.08,111.91,111.91,0,0,0-36.72-20.67,8,8,0,0,0-6.46.59L128,41.85,97.88,25a8,8,0,0,0-6.47-.6A111.92,111.92,0,0,0,54.73,45.15a8,8,0,0,0-2.83,6.07l-.15,33.65-29.83,17a8,8,0,0,0-3.89,5.4,106.47,106.47,0,0,0,0,41.56,8,8,0,0,0,3.89,5.4l29.83,17,.12,33.63a8,8,0,0,0,2.83,6.08,111.91,111.91,0,0,0,36.72,20.67,8,8,0,0,0,6.46-.59L128,214.15,158.12,231a7.91,7.91,0,0,0,3.9,1,8.09,8.09,0,0,0,2.57-.42,112.1,112.1,0,0,0,36.68-20.73,8,8,0,0,0,2.83-6.07l.15-33.65,29.83-17a8,8,0,0,0,3.89-5.4A106.47,106.47,0,0,0,237.94,107.21ZM128,168a40,40,0,1,1,40-40A40,40,0,0,1,128,168Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          These roles
           would be a great match
          <div
            class="text-sm text-zinc-300"
          >
            <div>
              foo
            </div>
            <div>
              bar
            </div>
          </div>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM84,184a12,12,0,1,1,12-12A12,12,0,0,1,84,184Zm44,0a12,12,0,1,1,12-12A12,12,0,0,1,128,184Zm0-40a12,12,0,1,1,12-12A12,12,0,0,1,128,144Zm44,40a12,12,0,1,1,12-12A12,12,0,0,1,172,184Zm0-40a12,12,0,1,1,12-12A12,12,0,0,1,172,144Zm36-64H48V48H72v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          With
           
          one of these commitments
          <div
            class="text-sm text-zinc-300"
          >
            Freelance, Internship
          </div>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M248,208H232V96a8,8,0,0,0,0-16H184V48a8,8,0,0,0,0-16H40a8,8,0,0,0,0,16V208H24a8,8,0,0,0,0,16H248a8,8,0,0,0,0-16ZM80,72H96a8,8,0,0,1,0,16H80a8,8,0,0,1,0-16Zm-8,48a8,8,0,0,1,8-8H96a8,8,0,0,1,0,16H80A8,8,0,0,1,72,120Zm64,88H88V160h48Zm8-80H128a8,8,0,0,1,0-16h16a8,8,0,0,1,0,16Zm0-40H128a8,8,0,0,1,0-16h16a8,8,0,0,1,0,16Zm72,120H184V96h32Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          In
           
          any of these capacities
          <div
            class="text-sm text-zinc-300"
          >
            Hybrid, Remote
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > roles, workModes, and employmentTypes > single 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M237.94,107.21a8,8,0,0,0-3.89-5.4l-29.83-17-.12-33.62a8,8,0,0,0-2.83-6.08,111.91,111.91,0,0,0-36.72-20.67,8,8,0,0,0-6.46.59L128,41.85,97.88,25a8,8,0,0,0-6.47-.6A111.92,111.92,0,0,0,54.73,45.15a8,8,0,0,0-2.83,6.07l-.15,33.65-29.83,17a8,8,0,0,0-3.89,5.4,106.47,106.47,0,0,0,0,41.56,8,8,0,0,0,3.89,5.4l29.83,17,.12,33.63a8,8,0,0,0,2.83,6.08,111.91,111.91,0,0,0,36.72,20.67,8,8,0,0,0,6.46-.59L128,214.15,158.12,231a7.91,7.91,0,0,0,3.9,1,8.09,8.09,0,0,0,2.57-.42,112.1,112.1,0,0,0,36.68-20.73,8,8,0,0,0,2.83-6.07l.15-33.65,29.83-17a8,8,0,0,0,3.89-5.4A106.47,106.47,0,0,0,237.94,107.21ZM128,168a40,40,0,1,1,40-40A40,40,0,0,1,128,168Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          This role
           would be a great match
          <div
            class="text-sm text-zinc-300"
          >
            <div>
              foo
            </div>
          </div>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,32H184V24a8,8,0,0,0-16,0v8H88V24a8,8,0,0,0-16,0v8H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32ZM84,184a12,12,0,1,1,12-12A12,12,0,0,1,84,184Zm44,0a12,12,0,1,1,12-12A12,12,0,0,1,128,184Zm0-40a12,12,0,1,1,12-12A12,12,0,0,1,128,144Zm44,40a12,12,0,1,1,12-12A12,12,0,0,1,172,184Zm0-40a12,12,0,1,1,12-12A12,12,0,0,1,172,144Zm36-64H48V48H72v8a8,8,0,0,0,16,0V48h80v8a8,8,0,0,0,16,0V48h24Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          With
           
          this commitment
          <div
            class="text-sm text-zinc-300"
          >
            Full-time
          </div>
        </div>
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M248,208H232V96a8,8,0,0,0,0-16H184V48a8,8,0,0,0,0-16H40a8,8,0,0,0,0,16V208H24a8,8,0,0,0,0,16H248a8,8,0,0,0,0-16ZM80,72H96a8,8,0,0,1,0,16H80a8,8,0,0,1,0-16Zm-8,48a8,8,0,0,1,8-8H96a8,8,0,0,1,0,16H80A8,8,0,0,1,72,120Zm64,88H88V160h48Zm8-80H128a8,8,0,0,1,0-16h16a8,8,0,0,1,0,16Zm0-40H128a8,8,0,0,1,0-16h16a8,8,0,0,1,0,16Zm72,120H184V96h32Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          In
           
          this capacity
          <div
            class="text-sm text-zinc-300"
          >
            On-site
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > startDate > active startDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,224a8,8,0,0,1-8,8H112a8,8,0,0,1,0-16h32A8,8,0,0,1,152,224Zm71.62-68.17-12.36,55.63a16,16,0,0,1-25.51,9.11L158.51,200h-61L70.25,220.57a16,16,0,0,1-25.51-9.11L32.38,155.83a16.09,16.09,0,0,1,3.32-13.71l28.56-34.26a123.07,123.07,0,0,1,8.57-36.67c12.9-32.34,36-52.63,45.37-59.85a16,16,0,0,1,19.6,0c9.34,7.22,32.47,27.51,45.37,59.85a123.07,123.07,0,0,1,8.57,36.67l28.56,34.26A16.09,16.09,0,0,1,223.62,155.83Zm-139.23,34Q68.28,160.5,64.83,132.16L48,152.36,60.36,208l.18-.13ZM140,100a12,12,0,1,0-12,12A12,12,0,0,0,140,100Zm68,52.36-16.83-20.2q-3.42,28.28-19.56,57.69l23.85,18,.18.13Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Actively searching for an opportunity
          <div
            class="text-sm text-zinc-300"
          >
            Available
             
            starting on 
            November 4th, 2500
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > startDate > casual startDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,224a8,8,0,0,1-8,8H112a8,8,0,0,1,0-16h32A8,8,0,0,1,152,224Zm71.62-68.17-12.36,55.63a16,16,0,0,1-25.51,9.11L158.51,200h-61L70.25,220.57a16,16,0,0,1-25.51-9.11L32.38,155.83a16.09,16.09,0,0,1,3.32-13.71l28.56-34.26a123.07,123.07,0,0,1,8.57-36.67c12.9-32.34,36-52.63,45.37-59.85a16,16,0,0,1,19.6,0c9.34,7.22,32.47,27.51,45.37,59.85a123.07,123.07,0,0,1,8.57,36.67l28.56,34.26A16.09,16.09,0,0,1,223.62,155.83Zm-139.23,34Q68.28,160.5,64.83,132.16L48,152.36,60.36,208l.18-.13ZM140,100a12,12,0,1,0-12,12A12,12,0,0,0,140,100Zm68,52.36-16.83-20.2q-3.42,28.28-19.56,57.69l23.85,18,.18.13Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Open to new opportunities
          <div
            class="text-sm text-zinc-300"
          >
            Available
             
            starting on 
            November 4th, 2500
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > startDate > historic startDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,224a8,8,0,0,1-8,8H112a8,8,0,0,1,0-16h32A8,8,0,0,1,152,224Zm71.62-68.17-12.36,55.63a16,16,0,0,1-25.51,9.11L158.51,200h-61L70.25,220.57a16,16,0,0,1-25.51-9.11L32.38,155.83a16.09,16.09,0,0,1,3.32-13.71l28.56-34.26a123.07,123.07,0,0,1,8.57-36.67c12.9-32.34,36-52.63,45.37-59.85a16,16,0,0,1,19.6,0c9.34,7.22,32.47,27.51,45.37,59.85a123.07,123.07,0,0,1,8.57,36.67l28.56,34.26A16.09,16.09,0,0,1,223.62,155.83Zm-139.23,34Q68.28,160.5,64.83,132.16L48,152.36,60.36,208l.18-.13ZM140,100a12,12,0,1,0-12,12A12,12,0,0,0,140,100Zm68,52.36-16.83-20.2q-3.42,28.28-19.56,57.69l23.85,18,.18.13Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Open to new opportunities
          <div
            class="text-sm text-zinc-300"
          >
            Available
             
            immediately
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`ObjectiveSection > startDate > objective with no startDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <div
        class="grid grid-cols-[min-content_auto]"
      >
        <div
          class="flex place-items-center p-1 pr-8 pl-8"
        >
          <svg
            class="h-6 w-6 text-amber-400 print:text-sky-600"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,224a8,8,0,0,1-8,8H112a8,8,0,0,1,0-16h32A8,8,0,0,1,152,224Zm71.62-68.17-12.36,55.63a16,16,0,0,1-25.51,9.11L158.51,200h-61L70.25,220.57a16,16,0,0,1-25.51-9.11L32.38,155.83a16.09,16.09,0,0,1,3.32-13.71l28.56-34.26a123.07,123.07,0,0,1,8.57-36.67c12.9-32.34,36-52.63,45.37-59.85a16,16,0,0,1,19.6,0c9.34,7.22,32.47,27.51,45.37,59.85a123.07,123.07,0,0,1,8.57,36.67l28.56,34.26A16.09,16.09,0,0,1,223.62,155.83Zm-139.23,34Q68.28,160.5,64.83,132.16L48,152.36,60.36,208l.18-.13ZM140,100a12,12,0,1,0-12,12A12,12,0,0,0,140,100Zm68,52.36-16.83-20.2q-3.42,28.28-19.56,57.69l23.85,18,.18.13Z"
            />
          </svg>
        </div>
        <div
          class="pt-2 pb-2"
        >
          Open to new opportunities
          <div
            class="text-sm text-zinc-300"
          >
            Available
             
            immediately
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
